[gd_scene load_steps=2 format=3 uid="uid://b42dpvb4s6yvs"]

[ext_resource type="Script" path="res://scripts/api.gd" id="1_l1n5m"]

[node name="API" type="Node"]
script = ExtResource("1_l1n5m")

[node name="HTTP_Category" type="HTTPRequest" parent="."]

[node name="HTTP_GameInfo" type="HTTPRequest" parent="."]

[node name="HTTP_GameQuit" type="HTTPRequest" parent="."]

[node name="HTTP_GameStart" type="HTTPRequest" parent="."]

[node name="HTTP_Login" type="HTTPRequest" parent="."]

[node name="HTTP_Logout" type="HTTPRequest" parent="."]

[node name="HTTP_RoundInfo" type="HTTPRequest" parent="."]

[node name="HTTP_RoundMedia" type="HTTPRequest" parent="."]

[node name="HTTP_RoundNext" type="HTTPRequest" parent="."]

[node name="HTTP_StreamerVote" type="HTTPRequest" parent="."]
